--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,12 @@
 name = "aws-lambda-pytest"
 version = "0.1.0"
 description = "Add your description here"
-requires-python = ">=3.13"
+readme = "README.md"
+requires-python = ">=3.11"
 dependencies = [
     "boto3>=1.42.31",
-    "boto3-stubs==1.42.31",
     "moto>=5.1.20",
     "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
 ]
